build: add appsettings file

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,12 +2,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=videogames.db"
   },
+  "CloudinarySettings": {
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "TokenKey": "clave super hiper mega increible fantastica secreta indescifrable"
+  "AllowedHosts": "*"
 }
